@@ -3,6 +3,9 @@
         * mips-opc.c (mips_builtin_opcodes): Use the WR_HILO, RD_HILO,
         MOD_HILO, and MOD_LO macros.
 
+        * mips-opc.c (M1, M2): Delete.
+        (mips_builtin_opcodes): Remove all uses of M1.
+
 2000-12-03  Ed Satterthwaite  ehs@sibyte.com  and
             Chris Demetriou   cgd@sibyte.com
 
